add repeat scheduling option

--- a/snowflake-ui/src/App.less
+++ b/snowflake-ui/src/App.less
@@ -403,6 +403,13 @@ em {
   border-radius: @border-radius-base;
   .ant-card-head {
     border:none;
+
+   /* margin-left: -10px;
+    margin-right: -10px;
+    border-bottom: 1px solid #1d2049;
+    margin-bottom: 10px;
+    margin-top: -10px;
+    background: #201e49;*/
     .ant-card-head-title {
       .small-card-heading-text;
     }
