--- a/snowflake-ui/src/App.less
+++ b/snowflake-ui/src/App.less
@@ -496,3 +496,17 @@ iframe
 {
   display: none;
 }
+
+.errorText {
+  color: indianred;
+}
+.successText {
+  color: darkseagreen;
+}
+
+.infoText {
+  color: orange;
+}
+.statusText {
+  font-size: medium;
+}
