--- a/snowflake-ui/src/App.less
+++ b/snowflake-ui/src/App.less
@@ -505,8 +505,8 @@ iframe
 }
 
 .infoText {
-  color: whitesmoke;
+  color: #5ac4be;
 }
 .statusText {
-  font-size: medium;
+  //font-size: medium;
 }
