add cron scheduler

--- a/snowflake-ui/src/App.less
+++ b/snowflake-ui/src/App.less
@@ -458,7 +458,9 @@ a:hover, a:focus {
     margin-bottom: 2px;
   }
 }
-
+.ant-form {
+  max-width: 860px;
+}
 .customWalletConnectButton {
   img {
    // display: none;
@@ -504,4 +506,8 @@ iframe
 
 .ant-menu-item-selected::after {
   border-bottom: none !important;
+}
+
+.react-js-cron-custom-select {
+  background: transparent !important;
 }
