--- a/snowflake-ui/src/App.less
+++ b/snowflake-ui/src/App.less
@@ -500,7 +500,7 @@ iframe
   color: #5ac4be;
 }
 .statusText {
-  //font-size: medium;
+  //color: #5ac4be;
 }
 
 
@@ -510,4 +510,16 @@ iframe
 
 .react-js-cron-custom-select {
   background: transparent !important;
+}
+.labelLayout {
+  div {
+    width:400px;
+    display:inline-block;
+    float:left;
+    margin-bottom: 10px;
+  }
+  label {
+    display: inline-block;
+    width: 130px;
+  }
 }
