--- a/snowflake-ui/src/App.less
+++ b/snowflake-ui/src/App.less
@@ -551,7 +551,7 @@ iframe
 }
 
 .flowTemplateSelect {
-  .ant-card {
+  .templateCardEnabled {
     &:hover {
       border : 1px solid #7c97b1;
     }
